--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --font-inter: "Inter", sans-serif;
-  --font-old-london: "Old London";
+  --font-titles: "Raleway", -apple-system, Roboto, Helvetica, Arial, sans-serif;
 }
 
 @layer utilities {
@@ -173,8 +173,8 @@ body.sounds-muted a {
 
 /* Font family */
 @font-face {
-  font-family: "Old London";
-  src: url("/fonts/Old London Font.woff") format("woff");
+  font-family: "Raleway";
+  src: url("/fonts/Raleway Font.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -186,7 +186,7 @@ body.sounds-muted a {
          h4,
          h5,
          h6 {
-           font-family: var(--font-old-london);
+           font-family: var(--font-titles);
            font-weight: 400;
            font-style: normal;
            font-display: swap;
@@ -195,7 +195,7 @@ body.sounds-muted a {
 
 /* Font family */
 .font-old-london {
-  font-family: var(--font-old-london);
+  font-family: var(--font-titles);
 }
 
 /* Dynamic frame layout */
